2010-05-26  Onkar Shinde  <onkarshinde@gmail.com>

	* src/interface.c: Change startup dialog from GtkWindow to GtkDialog.
	The 'modal' behaviour works as expected. Fixes LP: #519828.
	* po/de.po, AUTHORS: Updated German translation from launchpad.
	* src/interface.c, po/gnusim8085.pot: Move format tags outside
	translatable strings. Update pot file accordingly.
	* po/*.po: Semi-auto update of translations as per latest pot file.

2010-05-25  Onkar Shinde  <onkarshinde@gmail.com>

	* src/support.c: Fix stupid mistake - trying to access message from
	null error object. Remove the corresponding variable as it is never
	initialized. Fixes LP: #579319.

2010-05-23  Onkar Shinde  <onkarshinde@gmail.com>

	* po/it.po: Updated Italian translation from launchpad.
	* po/el.po, po/LINGUAS, AUTHORS: Greek translation.

2010-05-01  Onkar Shinde  <onkarshinde@gmail.com>

	* po/pt_BR.po, po/LINGUAS, AUTHORS: Brazilian Portuguese translation.

2010-03-19  Onkar Shinde  <onkarshinde@gmail.com>

	* installer.nsi.in: Don't use hard coded GTK version in message boxes.
	Add a generic function for checking existing GTK installations. Call it
	from init function. Add a function to uncheck the GTK checkbox on
	components page depending on existing GTK installation. Modify the
	AskForGtk function to use variables set by CheckGtk. Make the installer
	request for admin privileges for proper functioning.

2010-03-12  Onkar Shinde  <onkarshinde@gmail.com>

	* installer.nsi.in: Use the MUI method for setting icon for installer.
	Add functionality to embed GTK+ runtime installer. Changes derived from
	public domain script of GSmartControl.
	* pixmaps/gnusim8085_icon*: Delete old icon files.

2010-03-09  Onkar Shinde  <onkarshinde@gmail.com>

	* configure.in, NEWS: Start working on new release.
	* po/*.po, AUTHORS: Updated translations from launchpad.

2010-02-27  Onkar Shinde  <onkarshinde@gmail.com>

	* po/Makevars*: Change the bug reporting address in Makevars. Delete