@@ -17,6 +17,7 @@ Marcelo Souza <m_souza@users.sourceforge.net>
 Missouga Dongi <zelea2@users.sourceforge.net>
 Puneeth Bhat <puneeth_bhat@users.sourceforge.net>
 Kamaleshwar Morjal <kamaleshwar.morjal@gmail.com>
+Debajit <debjit_bis08@users.sourceforge.net>
 
 Translators:
 ----------------------------
