@@ -48,6 +48,7 @@ gnusim8085_SOURCES = \
 	8085-link.c\
 	gui-view.c\
 	bridge.c\
+	gui-list-memory.c\
 	gui-list-message.c\
 	gui-list-data.c\
 	asm-listing.c\
@@ -70,6 +71,7 @@ gnusim8085_SOURCES = \
 	gui-app.h\
 	gui-editor.h\
 	gui-list-data.h\
+	gui-list-memory.h\
 	gui-list-message.h\
 	gui-list-stack.h\
 	gui-view.h\
