@@ -122,3 +122,8 @@ G_MODULE_EXPORT void on_start_but_open_clicked (GtkButton * button, gpointer use
 G_MODULE_EXPORT void on_start_but_close_clicked (GtkButton * button, gpointer user_data);
 
 G_MODULE_EXPORT void on_listing_save_clicked (GtkButton * button, gpointer user_data);
+
+G_MODULE_EXPORT void on_mem_list_start_clicked (GtkButton * button, gpointer user_data);
+
+G_MODULE_EXPORT void on_mem_list_start_changed (GtkEntry *entry, gpointer user_data);
+
