@@ -1,5 +1,8 @@
 GNUSim8085 1.3.7 (UNRELEASED)
 
+New:     LP: #579341 - Editable memory listing as a tab.
+         This allows easy viewing/editing of memory contents in a table. The
+         table is shown in a tab similar to Data/Stack content shown currently.
 Fix:     LP: #519828 - Start-up dialog should not be minimised
 Fix:     LP: #579319 - Help -> about = crash
 
